# cmsis_dap_tcp_esp32

./: .gitignore  CMakeLists.txt  CMakePresets.json  DAP.h  DAP_config.h  Driver_USART.h  README  README.md  UART.c  cmsis_dap_tcp.c  cmsis_dap_tcp.h  cmsis_dap_tcp_esp32.ino  device.h  pytest_cmsis_dap_tcp_esp32.py  sdkconfig  sdkconfig.board_esp32s3_devkit_c1  sdkconfig.board_esp32s3_zero  sdkconfig.board_xiao_esp32c6  sdkconfig.board_xiao_esp32c6_alt  sdkconfig.board_yd_esp32_s3  sdkconfig.defaults  sdkconfig.esp32s3_devkitc_1  sdkconfig.xiao_esp32c6
host/: uart_bridge.sh
host/wireshark/: dissector_cmsis_dap_tcp.lua
main/: CMakeLists.txt  DAP.h  DAP_config.h  Kconfig.projbuild  UART.c  cmsis_compiler.h  cmsis_dap_tcp.c  cmsis_dap_tcp.h  device_config.h  idf_component.yml  main.c  uart_bridge.c  uart_bridge.h  ws2812_led.c  ws2812_led.h
tests/: test_invariant_UART.c
